--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Joe Boyle",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.3",
+    "prettier": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
